--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
 
-</body>
+
+     <head>
+	 <title>Chat Sexy</title>
+	 <meta charset UTF8>
+	 <link rel="stylesheet" href="styles.css">
+
+     
+     </head>
+     
+     <body>
+
+
+    </body>
 </html>
