--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-
-     <head>
-	 <title>Chat Sexy</title>
-	 <meta charset UTF8>
-	 <link rel="stylesheet" href="chat/styles.css">
-
-     </head>
-     
-     
-     <body>
-     	<input type="bouton" name="appuie voyons">
-
-
-    </body>
-</html>
+	<head>
+		<title>Chat Sexy</title>
+		<meta charset UTF8>
+		<link rel="stylesheet" href="chat/styles3.css">
+		<link
+			
+		</head>
+		
+		
+		
+		<body>
+			<ul id="conversation">
+			</ul>
+			<div class="bottom">
+				<input type="text" id="send_text" />
+				<input type="button" id="send_button" value="send" />
+			</div>
+		
+			
+		</body>
+	</html>
