--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Chat Sexy</title>
+		<title>Chat</title>
 		<meta charset UTF8>
-		<link rel="stylesheet" href="chat/styles3.css">
-		<link
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+		
+<body>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+<h1>Chat</h1>
+
+<input type="text" id="send_text">
+<input type="button" id="send_button" value="send">
+
+<script src="script/script.js"></script>
+		
 			
-		</head>
-		
-		
-		
-		<body>
-			<ul id="conversation">
-			</ul>
-			<div class="bottom">
-				<input type="text" id="send_text" />
-				<input type="button" id="send_button" value="send" />
-			</div>
-		
-			
-		</body>
-	</html>
+</body>
+
+</html>
