--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 	<body>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-		<header class="container bg-warning text-white col-sm">
-			<h1>Chat</h1>
-		</header>
-
-		<div class="container-fluid">
-			<div class="row col-sm" id="hauteurL">
-				<div class="col bg-warning col-sm">
-					<input id="send_text" type="text">
-					<input id="send_button" type="button" value="send">
-				</div>
-			</div>
+		<div class="container-fluid bg-warning">
+			<h1 class="text-white">Chat</h1>
+			<input id="send_text" type="text">
+			<input id="send_button" type="button" value="Envoyer">
+		</div>
 
 			<script src="script/script.js"></script>
 			
