--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
   		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   		crossorigin="anonymous"></script>
-		<header class="container bg-warning text-white col-sm">
-			<h1>Chat</h1>
-		</header>
+
 		<div class="container-fluid bg-warning">
 			<h1 class="text-white">Chat</h1>
+			<div id="chatbox">
+   				<p id="messages"></p>
+			</div>
 			<input id="send_text" type="text">
 			<input id="send_button" type="button" value="Envoyer">
 		</div>
